--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,6 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
-    "pinia": "^3.0.4",
     "vue": "^3.5.28",
     "vue-router": "^5.0.2"
   },
@@ -28,8 +27,7 @@
     "npm-run-all2": "^8.0.4",
     "oxlint": "~1.47.0",
     "prettier": "3.8.1",
-    "vite": "^7.3.1",
-    "vite-plugin-vue-devtools": "^8.0.6"
+    "vite": "^7.3.1"
   },
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
