--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand",
+    "sync:cries": "node src/scripts/syncPokemonCries.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
